Fixed nav on mobile

--- a/layout/MainLayout.module.css
+++ b/layout/MainLayout.module.css
@@ -3,24 +3,30 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0 5px;
     box-shadow: 0px 5px #00000026;
     z-index: 1;
     position: sticky;
     flex-direction: column;
+    max-width: 100dvw;
 
     nav {
         display: flex;
         width: 100%;
-        justify-content: space-evenly;
+        justify-content: center;
+        overflow: hidden;
 
         .navLink {
             display: flex;
             justify-content: space-evenly;
-            width: calc(1 / 5 * 100%);
+            width: calc(1 / 4 * 100%);
             text-decoration: none;
             opacity: 75%;
             padding: 4px;
+            font-size: small;
+
+            @media (max-width: 500px) {
+                font-size: x-small;
+            }
         }
         .navLinkActive {
             border-bottom: 4px solid #00b832;
